--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<ul>
 						<li>Learning web development. Or at least I do right now.</li>
 						
-						<li> <a href="https://www.zenpen.io"> <i> this site.</i></a> (I borrowed their style!)</li>
+						<li> <a href="http://www.zenpen.io"> <i> this site.</i></a> (I borrowed their css!)</li>
 						<li> <a href="https://soundcloud.com/iheartcomix/gavin-turek-dont-fight-it"><i>this song.</i></a> </li>
 						<li> Making things.</li>
 					</ul>
