--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			 I [<a href="https://en.wikipedia.org/wiki/Computer_programming">code</a>]__ I [<a href="http://doodle.ly/">doodle</a>]__ and I [<a href="https://www.github.com/vkrish1">make things</a>].
 			
 			<br><br>
-			<markdown>###</markdown> Find me [<a href="https://www.github.com/vkrish1">else</a>-<a href="https://www.linkedin.com/in/veenakrish">where</a>].
+			<markdown>###</markdown> Find me [<a href="www.c4q.nyc">else</a>-<a href="https://www.linkedin.com/in/veenakrish">where</a>].
 
 	</body>
 	
