--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>GWC_Snowman</title>
   <script src="processing.min.js"></script>
-
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
   
 
 </head>
@@ -13,8 +13,12 @@
 <body class="mainPage" style="background-color: rgb(180, 220, 230)">
   <h2>
 
-    <div style="width:800px; margin:0 auto">
+    <div style="width:80%; margin:0 auto">
      <canvas data-processing-sources="my_snowman.pde"></canvas>
+     </div>
+     <div style="font-family: 'Josefin Slab'; font-size:50px; width:800px; margin:0 auto;padding-top:20px">
+     Make your own snowman with Khan Academy's 
+     <a href="https://www.khanacademy.org/computing/computer-programming/programming">animation course!</a>
      </div>
   </h2>
 
