Added Other Things section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
   </div>
 </div>
 
+
+<div class="content">
+  <div>
+    <span class="card-title">Other Things I've Done</span>
+  </div>
+  <div class="content">
+    <ul>
+    <li> A <a href="">Weasley Clock</a> from an Arduino Nano and a stepper motor</li>
+    <li> TA for <a href="https://www3.cs.stonybrook.edu/~cse316/" target="_blank">Fundamentals of Software Development</a> at SBU </li>
+    <li> Intro to Data Science <a href="https://colab.research.google.com/drive/1D8wzEmWWRU5ono4zkN0GEj5BFwqONkzO">wokshop</a target="_blank"> for the HackHealth hackathon organized by SBU's Women in Computer Science organization </li>
+  </ul>
+  </div>
+</div>
+
+
 </body>
 
 
