--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   </div>
   <div class="content">
     <ul>
+    <li>Attended the <a href="https://ghc.anitab.org/">Grace Hopper Conference</a> as a student scholarship recipient</li>
     <li> Led an Intro to Data Science <a href="https://colab.research.google.com/drive/1D8wzEmWWRU5ono4zkN0GEj5BFwqONkzO">wokshop</a target="_blank"> and served as a judge for the HackHealth hackathon organized by SBU's Women in Computer Science organization </li>
     <li>Contributor to the Graduate Women in Science and Engineering <a href="https://sbugwise.com/?page_id=133">blog</a>, writing about diversity and inclusion in STEM</li>
     <li>Developed a <a href="https://www.youtube.com/watch?v=GmVKwF1JVuc">dashboard</a> to explore relationships among common human viruses (including SARS-CoV-2) based on protein interactions</li>
