--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
 </div>
 
 
+<div class="content">
+  <div>
+    <span class="card-title">Things I've Done This Year</span>
+  </div>
+  <div class="content">
+    <ul>
+    <li><a href="https://ghc.anitab.org/">Grace Hopper Conference</a> student scholarship recipient</li>
+    <li>E-board member and student mentor for the <a href="https://sbugwise.com/" target="_blank">Graduate Women in Science and Engineering organization</a>. Contributor to the GWiSE blog, writing about diversity and inclusion in STEM</li>
+    <li>E-board member, Computer Science Graduate Student Organization</li>
+    <li>Led an Intro to Data Science <a href="https://colab.research.google.com/drive/1D8wzEmWWRU5ono4zkN0GEj5BFwqONkzO">workshop</a target="_blank"> and served as a judge for the HackHealth hackathon organized by SBU's Women in Computer Science organization </li>
+    <li>Developed a <a href="https://www.youtube.com/watch?v=GmVKwF1JVuc">dashboard</a> to explore relationships among common human viruses (including SARS-CoV-2) based on protein interactions</li>
+  </ul>
+  </div>
+</div>
+
 
 
 <div class="content">
@@ -69,7 +84,14 @@
     <span class="card-title">Graduate Coursework</span>
   </div>
   <div id="course-description" class="content">
-    <div>Machine Learning <a href="http://www3.cs.stonybrook.edu/~minhhoai/courses/cse512/index.html" target="_blank">(CSE512)</a>, Network Security <a href="https://amir.rahmati.com/teaching/cse508f19/" target="_blank">(CSE508)</a>, Computer Vision <a href="http://www3.cs.stonybrook.edu/~cse527/" target="_blank">(CSE527)</a>, Computational Learning Theory <a href="https://www.cis.upenn.edu/~mkearns/teaching/COLT/colt16.html" target="_blank">(CIS627)</a>,  Network Neuroscience,  Fundamentals of AI,  Database and Information Systems </div>
+	<ul>
+	<li>Machine Learning <a href="http://www3.cs.stonybrook.edu/~minhhoai/c    ourses/cse512/index.html" target="_blank">(CSE512)</a></li>
+    <li>Network Security <a href="https://amir.rahmati.com/teaching/cse508f19/" target="_blank">(CSE508)</a></li>
+	<li>Computer Vision <a href="http://www3.cs.stonybrook.edu/~cse527/" target="_blank">(CSE527)</a></li>
+	<li>Cyber-physical Systems <a href="http://www.ece.sunysb.edu/~slin/index.html", target="_blank">(ESE534)</a></li>
+	<li>Computational Learning Theory <a href="https://www.cis.upenn.edu/~mkearns/teaching/COLT/colt16.html" target="_blank">(CIS627)</a></li>
+	<li>Other: Network Neuroscience,  Fundamentals of AI,  Database and Information Systems</li>
+	</ul>
   </div>
 
 </div>
@@ -80,8 +102,8 @@
   </div>
   <div class="content">
     <ul>
-    <li><a href="https://www3.cs.stonybrook.edu/~richard/index.html">CSE316</a>: Fundamentals of Software Development (Javascript, React)</li>
-    <li><a href="https://www3.cs.stonybrook.edu/~mikepo/CSE363/2019/">CSE363</a>: Offensive Security</li>
+    <li>Fundamentals of Software Development (Javascript, React) <a href="https://www3.cs.stonybrook.edu/~richard/index.html">(CSE316)</a></li>
+    <li>Offensive Scurity <a href="https://www3.cs.stonybrook.edu/~mikepo/CSE363/2019/">(CSE363)</a></li>
   </ul>
   </div>
 </div>
@@ -95,20 +117,6 @@
   </div>
 </div>
 
-
-<div class="content">
-  <div>
-    <span class="card-title">Other Things I've Done This Year</span>
-  </div>
-  <div class="content">
-    <ul>
-    <li>Attended the <a href="https://ghc.anitab.org/">Grace Hopper Conference</a> as a student scholarship recipient</li>
-    <li> Led an Intro to Data Science <a href="https://colab.research.google.com/drive/1D8wzEmWWRU5ono4zkN0GEj5BFwqONkzO">wokshop</a target="_blank"> and served as a judge for the HackHealth hackathon organized by SBU's Women in Computer Science organization </li>
-    <li>Contributor to the Graduate Women in Science and Engineering <a href="https://sbugwise.com/?page_id=133">blog</a>, writing about diversity and inclusion in STEM</li>
-    <li>Developed a <a href="https://www.youtube.com/watch?v=GmVKwF1JVuc">dashboard</a> to explore relationships among common human viruses (including SARS-CoV-2) based on protein interactions</li>
-  </ul>
-  </div>
-</div>
 
 
 </body>
