added google scholar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <i class="fas fa-envelope fa-2x"></i>
         </a>
       </div>
+      <div id="gscholar"><a href="https://scholar.google.com/citations?user=GDW8oqsAAAAJ&hl=en" class="icon" target="_blank" title="Google Scholar">
+        <i class="fas fa-graduation-cap fa-2x"></i>
+        </a>
+      </div>
       <div id="github"><a href="https://github.com/vkrish1" class="icon" target="_blank" title="GitHub">
         <i class="fab fa-github fa-2x"></i>
       </a></div>
